<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>eddie_navigation</name>
  <version>0.0.0</version>
  <description>nav2 packages for eddie</description>

  <maintainer email="vamsikalagaturu@gmail.com">Vamsi Kalagaturu</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eddie_gazebo</depend>
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>